0.7.1
-----
1. Fix clearing selection when adding, inserting, or playing tracks.
2. Fix composers not showing in now playing and queue.

0.7.0
-----
 1. Use role/genre/artist filter when listing album tracks in more scenarios.
 2. Fix menu button position for grid items when there are only a few.
 3. Remove usage of vue-router.
 4. Allow jump-list to have more entries.
 5. Fix jumplist colours, especially for light variant.
 6. Remove 'Music Folders' from non-server categories listing, its just too
    slow.
 7. Add more grid size increments (every 5px from 125px to 175px)
 8. Make artist and album entries in queue clickable (desktop browsers only).
 9. Make album subtitle (artist) clickable (desktop browsers only).
10. Remove A..Z groups, no longer required.
11. Only perform IP detection if running under Android - to fix MS Edge issue.
12. If showing track numbers, add small circle between number and title.
13. Fix showing albums under Genres when filtered by Composer or Conductor.
14. Show composer in queue and now playing for Classical and Jazz tracks.
15. Better handling of dynamic playlists, not perfect, but better.
16. Don't display fullscreen dialog when there are no players found, just show a
    spinner next to player selection menu. This allows settings, and start
    player menu item, to still be accessible.
17. Minfiy each JS file, as opposed to combining into one, as otherwise the
    speed of scrolling large lists is affected.
18. Set icon font to block instead of having browser use a fallback in case of
    slow network.
19. Expand the list of genres that will prompt for composer or conductor.
20. Add grid/list toggle button.
21. Because of added grid/list toggle, remove 'Home' button if screen width is
    less than 550px - 'go home' can still be accessed via menu. Alternatively,
    longpress on back button goes home.
22. Use view-recycler for all lists of more than 200 items.
23. When fullscreen connection lost dialog is shown, immediately try a